Bug 24459 - Intel Driver > 2.8: Cairo rendering bug, triggered in QtCurve GTK engine
Summary: Intel Driver > 2.8: Cairo rendering bug, triggered in QtCurve GTK engine
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: regression
: 24478 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-10-11 04:57 UTC by Christian
Modified: 2009-10-26 14:14 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Problem with Intel driver 2.9 and QtCurve with cairo for arrows (43.01 KB, image/png)
2009-10-11 04:57 UTC, Christian
no flags Details

Description Christian 2009-10-11 04:57:29 UTC
Created attachment 30269 [details]
Problem with Intel driver 2.9 and QtCurve with cairo for arrows

As already reported to the Developer of the QtCurve Qt3/Qt4/GTK+ Engine, there is a bug in the intel driver > 2.8 causing rendering bugs together with cairo: Usually the arrows (used for submenus, scrollbars, ...) are drawn with cairo, using non anti-aliased lines. In that case the arrows are not drawn with intel > 2.9, but they are with Intel up to 2.8 or nvidia drivers. As soon as the lines are either antialiased or the arrows are drawn with GDK, this problem does not occur. 

You can read a bit of discussion about it here: 
http://www.kde-look.org/content/show.php?content=40492

or contact the QtCurve developer for additional information. 


Steps to reproduce: 
- Install and use the QtCurve GTK+ Engine < 0.69  (as 0.69 has a workaround) 
- Install intel drivers > 2.8 
- Restart X
- Open a GTK+ Application using arrows (almost every one)  

Expected result: 
Everything is drawn correctly. 

Actual result: 
All arrows (submenus, drop down lists, drop down boxes, scrollbar buttons, ...) are missing

Versions used: 
Ubuntu Karmic (unfortunately all I have on a intel GPU machine) 
2.6.31 Kernel on an x86 machine  (Acer Aspire D150 netbook) 
Intel driver 2.9 out of XSwat / Edgers PPA (which includes current git)
Intel Corporation Mobile 945GME
libcairo: 1.8.8 

There is a screenshot attached. (problem with QtCurve, Intel 2.9) 

I am quite sure that this is a intel driver bug, not a problem of QtCurve, as

1) It does not occur with Intel drivers up to (including) 2.8 
2) It does not occur on different drivers (nvidia) 

and not a Karmic problem, as it was reported on Debian as well. 

If you need further information, just ask. 
(As I am new to the freedesktop bugtracker, I might have missed something even though I read instructions) 

Kind regards, 

Christian
Comment 1 Chris Wilson 2009-10-12 06:39:35 UTC
Fixed with commit 7e8f32d0a7279dce1976f87612833d9092554cfe
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Oct 12 14:33:08 2009 +0100

    uxa: Free the ScratchPixmapHeader after its associated Picture
    
    Fixes: http://bugs.freedesktop.org/show_bug.cgi?id=24459
    Intel Driver > 2.8: Cairo rendering bug, triggered in QtCurve GTK engine
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Thank you for the bug report.
Comment 2 Christian 2009-10-12 06:44:32 UTC
That was quick. 

Thanks for the quick reaction, I'll inform the QtCurve maintainer that he can remove the workaround for further QtCurve versions as major distributions provide updated drivers. 


Thanks for the good support, kind regards

Christian
Comment 3 Fabio Pedretti 2009-10-13 07:38:17 UTC
What about backporting it to 2.9 branch?
Comment 4 Chris Wilson 2009-10-26 09:41:32 UTC
This fix was included with the 2.9.1 maintenance release - thanks.
Comment 5 Chris Wilson 2009-10-26 14:14:55 UTC
*** Bug 24478 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.